<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.stutiguias</groupId>
  <artifactId>CDSC</artifactId>
  <version>1.2</version>
  <name>CDSC-${project.version}</name>
  <description>CDSC</description>
  
  <repositories>
    <!-- Bukkit -->
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    <!-- vault -->
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
    <!--SimpleClans-->
    <repository>
        <id>roinuj-repo-releases</id>
        <name>RoinujNosde's Repository</name>
        <url>https://repo.roinujnosde.me/releases</url>
    </repository>
  </repositories>
  
    <dependencies>
		
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.sacredlabyrinth.phaed.simpleclans</groupId>
            <artifactId>SimpleClans</artifactId>
            <version>2.19.2</version>
        </dependency>
        
  </dependencies>
  
  <build>
    <finalName>${project.name}</finalName>
    <sourceDirectory>${basedir}/src/</sourceDirectory>

    <resources>
      <resource>
        <targetPath>.</targetPath>
        <filtering>true</filtering>
        <directory>${basedir}/src/</directory>
        <includes>
          <include>plugin.yml</include>
          <include>config.yml</include>
          <include>msg.yml</include>
        </includes>
      </resource>

    </resources>
    
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
      </plugin>
      
    </plugins>
  </build>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <bukkit.version>1.16.5</bukkit.version>
  </properties>
</project>